# PythonWordScores

./: .gitignore  README.md  highscoringwords.py  pyproject.toml
