[tool.poetry]
name = "pythonwordscores"
version = "0.1.0"
description = "Python Poetry project setup for Scrabble simulator project requirements."
authors = ["ameline"]

[tool.poetry.dependencies]
python = "^3.8.10"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
